temporary fix popup is not showing
 - temporary fix popup is not showing because of z-index problem.

--- a/popup.css
+++ b/popup.css
@@ -6,6 +6,7 @@
     border: solid 1px white;
     padding: 3px;
     position: fixed;
+    z-index: 999;
 }
 
 .meaning {
